deployment/kubernetes/core/frontend/tm-ui-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: tm-ui
  name: tm-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      run: tm-ui
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: tm-ui
    spec:
      containers:
      - image: ceposta/tm-ui:1.0
        imagePullPolicy: IfNotPresent
        name: tm-ui
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
