deployment/kubernetes/core/frontend/ticket-monster-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tm-gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  backend:
    serviceName: tm-ui
    servicePort: 80
